<resources>
    <string name="app_name">DemoProject</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_to_login">Go to Login</string>
    <string name="login">login</string>
    <string name="home_page">Home Page</string>
    <string name="log_out">Log Out</string>

    <string name="float_modal_btn" />
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">date</string>
</resources>