<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".screens.SignUp.MainActivity"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/signup_image"
        android:contentDescription="@string/sign_up" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/txt_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/first_name"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/edt_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input_background"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:hint="@string/first_name"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_marginVertical="8dp"/>

            <EditText
                android:id="@+id/edt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input_background"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:hint="@string/last_name"
                android:autofillHints="" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginHorizontal="20dp"
        />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_input_background"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="Email"
        />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginHorizontal="20dp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/custom_input_background"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="Password" />

    <TextView
        android:id="@+id/txt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:hint="Confirm Password"
        android:layout_marginHorizontal="20dp"
    />


    <EditText
        android:id="@+id/edt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/custom_input_background"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="Confirm Password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="20sp"
        >

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#2B76E6"
            android:text="@string/sign_up"
            app:cornerRadius="8dp"
            android:textColor="#fff"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_signup_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#2B76E6"
            android:text="@string/go_to_login"
            app:cornerRadius="8dp"
            android:textColor="#fff"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>